# GolfBot_vesc

./: .gitignore  CLAUDE.md  README.md  divot_area_live_cloude4_distance.py  gps_accuracy_monitor.py  muthesis.cls  stepper_controller_enhanced.ino  test_arduino_connection.py
Teodor_Thesis_Template_MU/: main.acr  main.alg  main.glsdefs  main.tex  muthesis.cls
Teodor_Thesis_Template_MU/appendix/: additional_data.tex
Teodor_Thesis_Template_MU/bibliography/: refs.bib
Teodor_Thesis_Template_MU/chapters/: 01_Introduction.tex  02_Lit_review.tex  03_Design.tex  04_Implementation.tex  05_Validation.tex  06_Future_work.tex  07_Conclusion.tex
Teodor_Thesis_Template_MU/frontmatter/: abstract.tex  acknowledgements.tex  acronyms.tex  copyright.tex  declaration.tex  dedication.tex  glossaries.tex  nomenclature.tex  preface.tex
install/: local_setup.sh  setup.sh
install/differential_drive/lib/differential_drive/: diff_vel_ctrl_node  sony_gamepad_node
install/differential_drive/share/differential_drive/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/differential_drive/share/differential_drive/config/: left_vesc_config.yaml  right_vesc_config.yaml
install/differential_drive/share/differential_drive/launch/: diff_drive.launch.py
install/vesc_driver/include/vesc_driver/: crc.hpp  datatypes.hpp  vesc_driver.hpp  vesc_interface.hpp  vesc_packet.hpp  vesc_packet_factory.hpp
install/vesc_driver/lib/vesc_driver/: vesc_driver_node
install/vesc_driver/share/vesc_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/vesc_driver/share/vesc_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  vesc_driverConfig-version.cmake  vesc_driverConfig.cmake
install/vesc_driver/share/vesc_driver/config/: vesc_config.yaml
install/vesc_interfaces/share/vesc_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/differential_drive/: package.xml  setup.cfg  setup.py
src/differential_drive/arduino_sketches/: stepper_controller_with_enable.ino  stepper_controller_with_imu.ino  stepper_controller_with_imu_configurable.ino  stepper_controller_with_imu_fixed.ino  stepper_controller_with_imu_simple.ino  stepper_motor_hardware_test.ino  stepper_motor_test.ino
src/differential_drive/config/: left_vesc_config.yaml  path_following.rviz  right_vesc_config.yaml  stepper_config.yaml  stepper_imu_config.yaml
src/differential_drive/differential_drive/: align_and_repair_node.py  camera_node.py  divot_detection_intel.py  golfbot_gui_node.py  gps_monitor_node.py  logitech_gamepad.py  logitech_gamepad_old.py  odometry_node.py  odometry_test_node.py  odometry_test_node_enhanced.py  odometry_test_node_mower.py  path_follower_node.py  rtk_test_node.py  rtk_test_node_return.py  sony_gamepad.py  stepper_controller_node.py  stepper_imu_node.py  velocity_control.py
src/differential_drive/launch/: diff_drive.launch.py  test_navsat.launch.py
src/differential_drive/old_stepper_nodes/: align_and_repair_node.py  odometry_test_node.py  odometry_test_node_square.py  square_test_publisher.py  stepper_motor_simple.py  stepper_simple_node.py  velocity_control_old.py
src/vesc_driver/: CMakeLists.txt  package.xml
src/vesc_driver/include/vesc_driver/: datatypes.hpp
src/vesc_driver/launch/: vesc_driver_node.launch.py
src/vesc_driver/src/: vesc_driver.cpp  vesc_interface.cpp  vesc_packet.cpp
src/vesc_interfaces/: CMakeLists.txt  package.xml
(+74 files in other folders)
