<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vesc_driver</name>
  <version>0.0.1</version>
  <description>
    ROS device driver for the Vedder VESC open source motor driver.
    
    Note that this is a modified copy of the ROS2 controller. I only
    hold the right over the modified parts of the code.
  </description>
  <maintainer email="jamespetri28@gmail.com">james</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vesc_interfaces</depend>
  <depend>serial_driver</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

